search controller and service